--- a/index.html
+++ b/index.html
@@ -16,42 +16,42 @@
     <style>
       @font-face {
         font-family: 'Bauhaus_Chez_Display_2.0';
-        src: url('./assets/fonts/BauhausChezDisplay2.0-Regular.otf') format('opentype');
+        src: url('/assets/fonts/BauhausChezDisplay2.0-Regular.otf') format('opentype');
         font-weight: normal;
         font-style: normal;
         font-display: swap;
       }
       @font-face {
         font-family: 'Bauhaus_Chez_Display_2.0';
-        src: url('./assets/fonts/BauhausChezDisplay2.0-Light.otf') format('opentype');
+        src: url('/assets/fonts/BauhausChezDisplay2.0-Light.otf') format('opentype');
         font-weight: 300;
         font-style: normal;
         font-display: swap;
       }
       @font-face {
         font-family: 'Bauhaus_Chez_Display_2.0';
-        src: url('./assets/fonts/BauhausChezDisplay2.0-Medium.otf') format('opentype');
+        src: url('/assets/fonts/BauhausChezDisplay2.0-Medium.otf') format('opentype');
         font-weight: 500;
         font-style: normal;
         font-display: swap;
       }
       @font-face {
         font-family: 'Bauhaus_Chez_Display_2.0';
-        src: url('./assets/fonts/BauhausChezDisplay2.0-SemiBold.otf') format('opentype');
+        src: url('/assets/fonts/BauhausChezDisplay2.0-SemiBold.otf') format('opentype');
         font-weight: 600;
         font-style: normal;
         font-display: swap;
       }
       @font-face {
         font-family: 'Bauhaus_Chez_Display_2.0';
-        src: url('./assets/fonts/BauhausChezDisplay2.0-Bold.otf') format('opentype');
+        src: url('/assets/fonts/BauhausChezDisplay2.0-Bold.otf') format('opentype');
         font-weight: 700;
         font-style: normal;
         font-display: swap;
       }
       @font-face {
         font-family: 'Bauhaus_Chez_Display_2.0';
-        src: url('./assets/fonts/BauhausChezDisplay2.0-Black.otf') format('opentype');
+        src: url('/assets/fonts/BauhausChezDisplay2.0-Black.otf') format('opentype');
         font-weight: 900;
         font-style: normal;
         font-display: swap;
